// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login form component Snapshots Renders empty state 1`] = `
<div>
  <form
    class=""
  >
    <div
      class="container field"
    >
      <label
        class="label"
        for="id-1"
      >
        E-mail
      </label>
      <div
        class="fieldContainer"
      >
        <input
          class="field"
          id="id-1"
          name="email"
          value=""
        />
      </div>
    </div>
    <div
      class="field"
    >
      <div
        class="container"
      >
        <label
          class="label"
          for="id-2"
        >
          Password
        </label>
        <div
          class="fieldContainer"
        >
          <input
            class="field withRightIcon"
            id="id-2"
            name="password"
            type="password"
            value=""
          />
          <div
            class="rightIconContainer"
          >
            <svg
              class="icon"
            >
              eye.svg
            </svg>
          </div>
        </div>
      </div>
    </div>
    <button
      class="button fullWidth"
      type="submit"
    >
      <div
        class="content withRightIcon"
      >
        Let me in!
        <div
          class="rightIconContainer"
        >
          <svg>
            arrow.svg
          </svg>
        </div>
      </div>
    </button>
  </form>
</div>
`;

exports[`Login form component Snapshots Renders field errorMessage state 1`] = `
<div>
  <form
    class=""
  >
    <div
      class="container field"
    >
      <label
        class="label"
        for="id-1"
      >
        E-mail
      </label>
      <div
        class="fieldContainer"
      >
        <input
          class="field"
          id="id-1"
          name="email"
          value="lukasz@ostrowski.ninja"
        />
      </div>
    </div>
    <div
      class="field"
    >
      <div
        class="container"
      >
        <label
          class="label withError"
          for="id-2"
        >
          Password
        </label>
        <div
          class="fieldContainer"
        >
          <input
            class="field withError withRightIcon"
            id="id-2"
            name="password"
            type="password"
            value=""
          />
          <div
            class="rightIconContainer"
          >
            <svg
              class="icon"
            >
              eye.svg
            </svg>
          </div>
        </div>
      </div>
    </div>
    <button
      class="button fullWidth"
      type="submit"
    >
      <div
        class="content withRightIcon"
      >
        Let me in!
        <div
          class="rightIconContainer"
        >
          <svg>
            arrow.svg
          </svg>
        </div>
      </div>
    </button>
  </form>
</div>
`;

exports[`Login form component Snapshots Renders filled state 1`] = `
<div>
  <form
    class=""
  >
    <div
      class="container field"
    >
      <label
        class="label"
        for="id-1"
      >
        E-mail
      </label>
      <div
        class="fieldContainer"
      >
        <input
          class="field"
          id="id-1"
          name="email"
          value="lukasz@ostrowski.ninja"
        />
      </div>
    </div>
    <div
      class="field"
    >
      <div
        class="container"
      >
        <label
          class="label"
          for="id-2"
        >
          Password
        </label>
        <div
          class="fieldContainer"
        >
          <input
            class="field withRightIcon"
            id="id-2"
            name="password"
            type="password"
            value="Asd123!"
          />
          <div
            class="rightIconContainer"
          >
            <svg
              class="icon"
            >
              eye.svg
            </svg>
          </div>
        </div>
      </div>
      <div
        class="conditions"
        data-testid="password-field:validation-conditions"
      >
        <div
          class="condition container"
        >
          <div
            class="bar valid"
          />
          <span
            class="label valid"
          >
            Min. 6 letters
          </span>
        </div>
        <div
          class="condition container"
        >
          <div
            class="bar valid"
          />
          <span
            class="label valid"
          >
            Upper letter
          </span>
        </div>
        <div
          class="condition container"
        >
          <div
            class="bar valid"
          />
          <span
            class="label valid"
          >
            Lower letter
          </span>
        </div>
        <div
          class="condition container"
        >
          <div
            class="bar valid"
          />
          <span
            class="label valid"
          >
            A digit
          </span>
        </div>
      </div>
    </div>
    <button
      class="button fullWidth"
      type="submit"
    >
      <div
        class="content withRightIcon"
      >
        Let me in!
        <div
          class="rightIconContainer"
        >
          <svg>
            arrow.svg
          </svg>
        </div>
      </div>
    </button>
  </form>
</div>
`;
